config properties add db_h2_file

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/db_digital_banc
-spring.datasource.username=RFagundes
-spring.datasource.password=UREgoOymPF6LWa7H
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create
 
