--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,14 +1,10 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.platform=h2
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:file:~/test
-#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./h2-db
 spring.datasource.username=sa
 spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.show-sql=true
